--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,168 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #141414;
   color: white;
+  box-sizing: border-box;
+  width: 100%;
+  height: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.welcome {
+  background-image: url("./assets/WE_00.png");
+
+  background-size:cover;
+
+  background-repeat: no-repeat;
+  
+}
+.backgroundText{
+  z-index: 5;
+  display: block;
+}
+.font1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20vw;
+  height: 100vh;
+  
+}
+.font1Mobile{
+  display: none;
+}
+.menu{
+  display: none;
+}
+.line{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  background: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navLinks a:hover{
+  color:#d9d9d9;
+}
+.navLinks .active{
+  border-bottom: 2px solid white;
+}
+@media screen and (max-width:768px){
+  .navBar.toggleActive{
+    background-color: #141414;
+    position: absolute;
   }
-  to {
-    transform: rotate(360deg);
+  .navLinks{
+    position: absolute;
+    display: none;
+    width: 100%;
+    top: 3.7rem;
+    flex-direction: column;
+    justify-content:space-evenly;
+    border-radius: 10px;
+    align-items: center;
+    transition: .3s;
+    background-color: #141414;
+  }
+  .navLinks.toggleActive {
+    display: flex;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+  }
+  .menu{
+    display: block;
+    cursor: pointer;
+  }
+  .menu.toggleActive .line:nth-child(2) {
+    opacity: 0;
+  }
+
+.menu.toggleActive .line:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+.menu.toggleActive .line:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+#about{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+.col{
+  float: left;
+  width: 50%;
+  padding-top: 80px;
+  height: 100%;
+}
+.homeLeft{
+  
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  text-align: center;
+  flex-flow: column;
+}
+.homeRight{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  text-align: center;
+  flex-flow: column;
+}
+.hStyle{
+  font-size: 15vw;
+}
+.pStyle{
+  font-size: calc(1.5em + 1vh);
+  font-weight:600;
+}
+.quickLinks{
+  display: flex;
+  justify-content: center;
+}
+.quickLinks:hover{
+  color: burlywood;
+}
+@media  screen and (max-width:970px) {
+  #about{
+    display: flex;
+    padding-top: 65px;
+    flex-flow: wrap-reverse;
+    box-sizing: border-box;
+  }
+  .col{
+    float: none;
+    width: 100%;
+    padding-top: 0;
+    display: block;
+    height: auto;
+  }
+  .homeImg{
+    width: 85% !important;
+  }
+  .hStyle{
+   
+    font-size: 16vw;
+
+  }
+  .pStyle{
+    font-size: calc(.5em + 1vh);
+    font-weight:600;
+  }
+  .homeRight{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    text-align: center;
+    flex-flow: column;
   }
 }
