--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,13 @@
   width: 100%;
   height: auto;
 }
-
 .welcome {
   background-image: url("./assets/WE_00.png");
 
   background-size:cover;
 
   background-repeat: no-repeat;
+  height: 100vh;
   
 }
 .backgroundText{
@@ -24,15 +24,31 @@
   display: block;
 }
 .font1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   font-size: 20vw;
-  height: 100vh;
-  
 }
 .font1Mobile{
   display: none;
+  font-size: 30vw;
+  font-weight: 500;
+}
+.arrow{
+  cursor: pointer;
+  height: 4vw;
+  width: 4vw;
+  border-style: solid;
+  border-color: rgb(255, 255, 255);
+  border-width: 0px 1px 1px 0px;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
+}
+.arrow:hover {
+  border-bottom-width: 4px;
+  border-right-width: 4px;
+}
+.leftBottom{
+  color: #bac4b8;
+  text-decoration-line: overline;
 }
 .menu{
   display: none;
@@ -53,116 +69,120 @@
 .navLinks .active{
   border-bottom: 2px solid white;
 }
-@media screen and (max-width:768px){
-  .navBar.toggleActive{
-    background-color: #141414;
-    position: absolute;
-  }
-  .navLinks{
-    position: absolute;
-    display: none;
-    width: 100%;
-    top: 3.7rem;
-    flex-direction: column;
-    justify-content:space-evenly;
-    border-radius: 10px;
-    align-items: center;
-    transition: .3s;
-    background-color: #141414;
-  }
-  .navLinks.toggleActive {
-    display: flex;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  }
-  .menu{
-    display: block;
-    cursor: pointer;
-  }
-  .menu.toggleActive .line:nth-child(2) {
-    opacity: 0;
-  }
 
-.menu.toggleActive .line:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-
-.menu.toggleActive .line:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-}
-#about{
-  position: relative;
-  width: 100%;
-  height: 100vh;
-}
-.col{
+.aboutCol{
   float: left;
   width: 50%;
-  padding-top: 80px;
   height: 100%;
-}
-.homeLeft{
-  
   display: flex;
   align-items: center;
-  justify-content:center;
-  text-align: center;
+  justify-content: center;
   flex-flow: column;
-}
-.homeRight{
-  display: flex;
-  align-items: center;
-  justify-content:center;
   text-align: center;
-  flex-flow: column;
 }
+
 .hStyle{
-  font-size: 15vw;
+  font-size: 12vw;
+  text-align: center;
+  align-items: center;
+  display: flex;
 }
 .pStyle{
-  font-size: calc(1.5em + 1vh);
+  font-size: calc(1em + 1vh);
   font-weight:600;
+  margin: .5rem;
 }
 .quickLinks{
   display: flex;
   justify-content: center;
 }
-.quickLinks:hover{
-  color: burlywood;
+.cards{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  padding: 3rem;
+  place-items: center;
+  column-gap: 2rem;
+  row-gap: 3rem;
+  padding: 3rem;
 }
-@media  screen and (max-width:970px) {
-  #about{
-    display: flex;
-    padding-top: 65px;
-    flex-flow: wrap-reverse;
-    box-sizing: border-box;
-  }
-  .col{
-    float: none;
-    width: 100%;
-    padding-top: 0;
-    display: block;
-    height: auto;
-  }
-  .homeImg{
-    width: 85% !important;
-  }
-  .hStyle{
-   
-    font-size: 16vw;
+.card{
+  box-shadow: 3px 3px 20px rgba(80, 78, 78, 0.5);
+  text-align: center;
+  width: 400px;
+  border-radius: 10px;
+}
+.card img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+.projectDesc p{
+  width: 100%;
+  padding: 0 50px;
+  color: #e4e6e7;
+}
+.features{
+  display: flex;
+  justify-content: space-around;
+  padding: 2rem;
+}
 
-  }
-  .pStyle{
-    font-size: calc(.5em + 1vh);
-    font-weight:600;
-  }
-  .homeRight{
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    text-align: center;
-    flex-flow: column;
-  }
+.features p{
+  font-size: 1.5rem;
+}
+
+.projectLink:hover{
+  background-color: rgb(129 121 121) !important;
+}
+
+#contact {
+  background-image: url("./assets/waves.jpg");
+  background-size:cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.contactWrapper{
+  width: 85%;
+  height: 90%;
+  /* background-color: #141414; */
+  background-color: #2e2e2e;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+}
+.contactInfo{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  padding: 50px;
+}
+.contactInfo li{
+  display: flex;
+  align-items: center;
+}
+.contactForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  width: 100%;
+}
+input:focus{
+  outline: none;
+}
+textarea:focus{
+  outline: none;
+}
+.transmit{
+  display: none;
+}
+.transmit.active{
+  display: flex;
 }
