--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-*{
+*, ::before, ::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -6,12 +6,10 @@
 .App {
   background-color: #141414;
   color: white;
-  box-sizing: border-box;
   width: 100%;
-  height: auto;
 }
 .welcome {
-  background-image: url("./assets/WE_00.png");
+  background-image: url("../assets/WE_00.png");
 
   background-size:cover;
 
@@ -26,6 +24,7 @@
 .font1 {
   text-align: center;
   font-size: 20vw;
+  font-weight: 500;
 }
 .font1Mobile{
   display: none;
@@ -50,6 +49,7 @@
   color: #bac4b8;
   text-decoration-line: overline;
 }
+
 .menu{
   display: none;
 }
@@ -73,7 +73,7 @@
 .aboutCol{
   float: left;
   width: 50%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -137,7 +137,7 @@
 }
 
 #contact {
-  background-image: url("./assets/waves.jpg");
+  background-image: url("../assets/waves.jpg");
   background-size:cover;
   background-repeat: no-repeat;
   display: flex;
@@ -179,6 +179,10 @@ input:focus{
 }
 textarea:focus{
   outline: none;
+}
+button:hover{
+  background-color: rgb(80 78 78 / 50%) !important;
+  color: white;
 }
 .transmit{
   display: none;
